# ForgeEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  create_project_structure.bat  setup_complete.bat  setup_git.bat  vcpkg.json
.github/workflows/: ci.yml
docs/: API.md
scripts/: npc_interactions.lua  quest_system.lua
scripts/mods/: custom_events.lua
src/: Main.cpp
src/AI/: BehaviorSystem.h  EmotionalSystem.h  PersonalitySystem.h  StorytellingSystem.h
src/Core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  ObjectPool.h  Profiler.h  Renderer.cpp  Renderer.h  SaveSystem.h  ScriptEngine.cpp  ScriptEngine.h  SimulationManager.cpp  SimulationManager.h  ThreadPool.h  Window.cpp  Window.h
src/Demos/: EconomicSimulationDemo.cpp  IntegratedSimulation.cpp  NPCSimulation.cpp  PopulationDynamicsDemo.cpp
src/GameSystems/: AdvancedTradeSystem.h  CulturalConstraintsSystem.h  EconomicSystem.cpp  EconomicSystem.h  EnvironmentalSystem.h  MultiVillageSystem.h  NPC.cpp  NPC.h  NPCAISystem.cpp  NPCAISystem.h  NPCAdvanced.cpp  NPCAdvanced.h  PlayerSystem.cpp  PlayerSystem.h  PopulationDynamics.cpp  PopulationDynamics.h  ProfessionSystem.h  SocialHierarchySystem.h  TechnologySystem.h  WorldGenerator.cpp  WorldGenerator.h
src/Rendering/: RenderingSystem.h
src/Scripting/: LuaScriptSystem.h
tests/: CMakeLists.txt
tests/AI/: StorytellingSystemTests.cpp
tests/Benchmarks/: PerformanceBenchmarks.cpp
tests/GameSystems/: MultiVillageSystemTests.cpp
